add serverless pseudo parameters

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "serverless-pseudo-parameters": "^2.4.0",
     "serverless-python-requirements": "^4.3.0"
   },
   "devDependencies": {},
