--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,12 @@ pylint = "*"
 [packages]
 boto3 = "*"
 pytest = "*"
+pytest-cov = "*"
+pylint = "*"
+astroid = "*"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
