--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "js-yaml": "^3.13.1",
     "serverless-pseudo-parameters": "^2.4.0",
-    "serverless-python-requirements": "^4.3.0"
+    "serverless-python-requirements": "^5.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "serverless-offline": "^5.11.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
