Added new structure support

--- a/serverless.conf.yml
+++ b/serverless.conf.yml
@@ -5,6 +5,6 @@ branchRouting:
     - dev: staging
 
 project:
-  nested: true
+  serviceModel: nested
   prefixParentFolder: true
   prefixRepoName: false
