--- a/serverless.yml
+++ b/serverless.yml
@@ -25,9 +25,8 @@ custom:
 functions:
   handler:
     handler: webhook.handler.handle
+    timeout: 30
     environment:
-      AWS_ACCESS_KEY_ID: ${self:custom.environment.awsAccessKeyId}
-      AWS_SECRET_ACCESS_KEY: ${self:custom.environment.awsSecretAccessKey}
       GITHUB_WEBHOOK_SECRET: ${self:custom.environment.githubWebhookSecret}
       GITHUB_ACCESS_TOKEN: ${self:custom.environment.githubAccessToken}
       BRANCH_ROUTE: ${file(serverless.conf.yml):branchRouting.route}
