--- a/serverless.yml
+++ b/serverless.yml
@@ -11,6 +11,10 @@ provider:
         - "codepipeline:StartPipelineExecution"
         - "codepipeline:UpdatePipeline"
       Resource: arn:aws:codepipeline:eu-central-1:#{AWS::AccountId}:*
+    - Effect: Allow
+      Action:
+        - "iam:PassRole"
+      Resource: arn:aws:iam::#{AWS::AccountId}:role/AWSCodePipeline-ServiceRole
 
 plugins:
   - serverless-python-requirements
